Fix Squishing on buttons

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -185,6 +185,7 @@ button:hover {
     margin-left: auto;
     border: solid #F9FAF8 1px;
     max-width: fit-content;
+    min-width: fit-content;
     max-height: 30px;
     /* border: 1px; */
     align-self: center;
